updated readMe and minor tweaks to routes
