# swagger-output.json
@@ -74,21 +74,17 @@
           }
         ],
         "responses": {}
-      },
+      }
+    },
+    "/meals/{id}": {
       "delete": {
         "description": "",
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "MealId": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {}
